test/spec_vectors/i32/fail/module_71.wat
(module (func (result i32) (i32.clz (i64.const 0))))